Small SCSS fixes
At point there where elements overlapping and making other elements unclickable. On top of that some unnecessary files were merged into one.

--- a/src/css/sass/layout/_functions.scss
+++ b/src/css/sass/layout/_functions.scss
@@ -1,115 +1,1 @@
-.liked {
-    position: relative;
-    z-index: 10;
-    visibility: hidden;
-    text-align: right;
 
-    &__img {
-        width: 8rem;
-    }
-
-    &__field {
-        display: inline-block;
-        margin-right: 10%;
-        width: 5rem;
-        height: 100%;
-        fill: $color-blue-secondary;
-        transition: all 0.2s ease-in-out;
-
-
-        &:hover {
-            fill: $color-blue-primary;
-            & .liked__remove,
-            .liked__vs {
-                opacity: 1;
-            }
-        }
-    }
-
-    &__list {
-        list-style: none;
-        background: $color-white;
-    }
-
-    &__panel {
-        padding: 1rem 0;
-        opacity: 0;
-        visibility: hidden;
-        transition: all .2s ease-in-out;
-        background-color: $color-white;
-        height: 0;
-        transition: all .2s ease-in-out;
-        width: 31rem;
-    }
-
-    &__panel:hover,
-    &__field:hover+&__panel {
-        visibility: visible;
-        opacity: 1;
-        height: 50vh;
-        overflow-y: scroll;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    }
-
-    &__link {
-        display: flex;
-        text-decoration: none;
-        background: white;
-        color: $color-text-grey-dark1;
-        padding: 1rem;
-        font-size: 2rem;
-        transition: $transition-small;
-        margin-top: 1rem;
-        justify-content: space-between;
-
-        &:hover {
-            background: $color-light-1;
-            transform: translateY(-.8rem);
-
-            .liked__remove,
-            .liked__vs {
-                opacity: 1;
-            }
-        }
-    }
-
-    &__type {
-        display: flex;
-    }
-
-    &__data {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        text-align: center;
-        margin: 0 1rem;
-    }
-
-    &__btn {
-        width: 3rem;
-        height: 3rem;
-        padding: .5rem;
-        margin:.5rem;
-        background-image: $gradient-blue;
-        color: $color-text-white;
-        border: none;
-        border-radius: 50%;
-        align-self: center;
-        box-shadow: $dropshadow-static-sm;
-        opacity: 0;
-        transition: $transition-small;
-
-        &:hover {
-            // background-color:
-            box-shadow: $dropshadow-hover-sm;
-            transform: scale(1.1);
-        }
-
-    }
-
-    &__buttons {
-        display: flex;
-        flex-direction: column;
-    }
-}
