--- a/src/css/sass/layout/_header.scss
+++ b/src/css/sass/layout/_header.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   height: 10rem;
   position: sticky;
+  padding-top: 2rem;
   top: 0;
   background-color: #eee;
   z-index: 50;
@@ -28,10 +29,235 @@
     animation-iteration-count: 1;
 
     &:hover {
-        left: 75%;
+      left: 75%;
+      opacity: 1;
+      transform-origin: 50% 80%;
+      animation: shake 2s 1s infinite ease-in-out;
+    }
+  }
+}
+
+.liked {
+  position: relative;
+  z-index: 10;
+  visibility: hidden;
+  text-align: right;
+  width: 15rem;
+
+  &__img {
+    width: 8rem;
+  }
+
+  &__field {
+    display: inline-block;
+    margin-right: 10%;
+    width: 5rem;
+    height: 100%;
+    fill: $color-blue-secondary;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      fill: $color-blue-primary;
+      & .liked__remove,
+      .liked__vs {
         opacity: 1;
-        transform-origin: 50% 80%;
-        animation: shake 2s 1s infinite ease-in-out;
+      }
+    }
+  }
+
+  &__list {
+    list-style: none;
+    background: $color-white;
+  }
+
+  &__panel {
+    padding: 1rem 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s ease-in-out;
+    background-color: $color-white;
+    height: 0;
+    transition: all 0.2s ease-in-out;
+    width: 31rem;
+    margin-left: -100%;
+  }
+
+  &__panel:hover,
+  &__field:hover + &__panel {
+    visibility: visible;
+    opacity: 1;
+    height: 50vh;
+    overflow-y: scroll;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  }
+
+  &__link {
+    display: flex;
+    text-decoration: none;
+    background: white;
+    color: $color-text-grey-dark1;
+    padding: 1rem;
+    font-size: 2rem;
+    transition: $transition-small;
+    margin-top: 1rem;
+    justify-content: space-between;
+
+    &:hover {
+      background: $color-light-1;
+      transform: translateY(-0.8rem);
+
+      .liked__remove,
+      .liked__vs {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__type {
+    display: flex;
+  }
+
+  &__data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    margin: 0 1rem;
+  }
+
+  &__btn {
+    width: 3rem;
+    height: 3rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    background-image: $gradient-blue;
+    color: $color-text-white;
+    border: none;
+    border-radius: 50%;
+    align-self: center;
+    box-shadow: $dropshadow-static-sm;
+    opacity: 0;
+    transition: $transition-small;
+
+    &:hover {
+      // background-color:
+      box-shadow: $dropshadow-hover-sm;
+      transform: scale(1.1);
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.search {
+  position: relative;
+  max-width: 40rem;
+
+  &__form {
+    visibility: visible;
+  }
+
+  &__btn {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+    fill: white;
+    margin-right: 1rem;
+  }
+
+  &__more-options {
+    position: relative;
+    width: auto;
+    height: 0;
+  }
+
+  &__container {
+    pointer-events: none;
+    position: relative;
+    visibility: hidden;
+    z-index: -1;
+    // display: none;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 20px;
+    padding: 2rem;
+    margin-top: 1.5rem;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+    transition: all 0.2s ease-in-out;
+    opacity: 0;
+    transform: scale(0.4);
+    transform-origin: 10% 10%;
+    @extend %unHighlightable;
+  }
+
+  &__sub-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0.3rem 0;
+    z-index: 10;
+  }
+
+  &__chk-btn {
+    display: none;
+  }
+
+  &__chk-btn:checked ~ &__container {
+    display: flex;
+    z-index: 10;
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: scale(1);
+  }
+
+  &__btn-label {
+    background-image: linear-gradient(
+      to right bottom,
+      #76cde7 0%,
+      #2b9ec8 100%
+    );
+    border-radius: 4rem;
+    border: none;
+    padding: 0.4rem 1.2rem;
+    color: #fff;
+    transition: all 0.2s ease-in-out;
+    margin: 1rem;
+    @extend %unHighlightable;
+  }
+
+  &__field-container {
+    background-color: white;
+    border-radius: 4rem;
+    display: flex;
+    transition: all 0.2s ease-in-out;
+    margin: 1rem 0;
+
+    &:focus-within {
+      transform: scale(1.02) translateY(-0.3rem);
+      box-shadow: 0 0.7rem 3rem #1181;
+    }
+  }
+
+  &__field {
+    border: none;
+    background-color: transparent;
+    width: 30rem;
+    font-size: 1.7rem;
+    padding-left: 3rem;
+    font-family: inherit;
+    outline: none;
+
+    &::placeholder {
+      color: $color-text-grey-light1;
     }
   }
 }
